# airsync

./: .cursorrules  .dockerignore  .env.example  .gitignore  .mycc.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.prod.yaml  config.yaml  config.yaml.example  deploy-server.sh  deploy.sh  pyproject.toml  secrets.enc.env  sync_mentoring_schema.py  x.txt
00_plans/: 0.1.md  00_conversation.md
coding_prompts/: commeting.rules.md
docker/: .dockerignore  Dockerfile.airsync  Dockerfile.pgsql  build.sh  custom-entrypoint.sh  docker-compose.yml  init.sql  pg_hba.conf
specs/: problems.md
src/: __init__.py  config.py  main.py  test.py
src/database/: postgresql.py
src/emsairtable/: __init__.py  airtable_client.py  data_sync.py  schema_printer.py  schema_sync.py
tests/: test_airtable_client.py  test_postgresql.py  test_schema_sync.py
