[tool.poetry]
name = "airsync"
version = "0.3.6"
description = ""
authors = ["Daniel Roziecki <emssik@emssik.eu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pyairtable = "^2.3.6"
psycopg2 = "^2.9.10"
pyyaml = "^6.0.2"
# CVE security pinning — transitive deps via pyairtable. Nie usuwaj bez weryfikacji CVE (zob. CHANGELOG 0.3.3).
requests = "^2.33.1"
urllib3 = "^2.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.10.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: testy wymagajace prawdziwych uslug (DB, API) - pomijane domyslnie",
]
addopts = "-m 'not integration'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
